Fix div overlap

--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ header {
 }
 
 .top {
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
 }
